[package]
name = "superworm"
version = "0.1.0"
edition = "2018"

[[example]]
name = "pingpong"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
env_logger = "0.9.0"
log = "0.4.16"
